// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`kiroEmitter > emits edit-tier agent (snapshot) 1`] = `
"{
  "name": "api-designer",
  "description": "API contract and specification design specialist for REST and GraphQL surfaces.",
  "prompt": "## Role & Expertise\\nYou are an expert code reviewer.\\n\\n## When to Use\\nAfter code is written or modified.\\n\\n## Workflow\\n1. Read the diff. 2. Flag issues. 3. Report.\\n\\n## Checklist & Heuristics\\n- Correctness before style.\\n\\n## Output Contract\\nA prioritized list of findings.\\n\\n## Boundaries\\nNever modify code; review only.",
  "tools": [
    "read",
    "write"
  ],
  "allowedTools": [
    "read"
  ],
  "model": "claude-opus-4"
}
"
`;

exports[`kiroEmitter > emits full-permission agent (snapshot) 1`] = `
"{
  "name": "feature-builder",
  "description": "Implements features end-to-end across the codebase with full tooling.",
  "prompt": "## Role & Expertise\\nYou are an expert code reviewer.\\n\\n## When to Use\\nAfter code is written or modified.\\n\\n## Workflow\\n1. Read the diff. 2. Flag issues. 3. Report.\\n\\n## Checklist & Heuristics\\n- Correctness before style.\\n\\n## Output Contract\\nA prioritized list of findings.\\n\\n## Boundaries\\nNever modify code; review only.",
  "tools": [
    "read",
    "write",
    "shell"
  ],
  "allowedTools": [
    "read"
  ],
  "model": "claude-opus-4"
}
"
`;

exports[`kiroEmitter > emits read-only agent (snapshot) 1`] = `
"{
  "name": "doc-reader",
  "description": "Reads and summarizes documentation without making changes.",
  "prompt": "## Role & Expertise\\nYou are an expert code reviewer.\\n\\n## When to Use\\nAfter code is written or modified.\\n\\n## Workflow\\n1. Read the diff. 2. Flag issues. 3. Report.\\n\\n## Checklist & Heuristics\\n- Correctness before style.\\n\\n## Output Contract\\nA prioritized list of findings.\\n\\n## Boundaries\\nNever modify code; review only.",
  "tools": [
    "read"
  ],
  "allowedTools": [
    "read"
  ]
}
"
`;
